gi/value.c
@@ -154,7 +154,7 @@ gjs_closure_new_for_signal(JSContext  *context,
 {
     GClosure *closure;
 
-    closure = gjs_closure_new(context, callable, description);
+    closure = gjs_closure_new(context, callable, description, FALSE);
 
     g_closure_set_meta_marshal(closure, GUINT_TO_POINTER(signal_id), closure_marshal);
 
@@ -168,7 +168,7 @@ gjs_closure_new_marshaled (JSContext    *context,
 {
     GClosure *closure;
 
-    closure = gjs_closure_new(context, callable, description);
+    closure = gjs_closure_new(context, callable, description, TRUE);
 
     g_closure_set_marshal(closure, closure_marshal);
 
